# Eight

./: README.md
images/: grammar.drawio
rust_memes/: Cargo.toml  TODO.md
rust_memes/src/: eight.rs  main.rs  testing.rs
rust_memes/src/console/: commands.rs
rust_memes/src/eight/: common.rs  literals.rs  values.rs
rust_memes/src/eight/common/: logging.rs  parsing.rs  running.rs  tokenizing.rs
rust_memes/src/eight/common/parsing/: ast.rs  context.rs  util.rs
rust_memes/src/eight/common/running/: interpreter.rs  memory.rs
rust_memes/src/eight/common/running/memory/: frame.rs  memref.rs  stack.rs
rust_memes/src/eight/common/tokenizing/: lexing.rs  symbols.rs  whitespace.rs
rust_memes/src/eight/expressions/: primary.rs  secondary.rs
rust_memes/src/eight/expressions/primary/: format.rs  noop.rs  print.rs  returnexpr.rs  variable.rs
rust_memes/src/eight/expressions/secondary/: callfunc.rs  operators.rs  parentheses.rs
rust_memes/src/eight/expressions/secondary/operators/: binary.rs
rust_memes/src/eight/literals/: basic.rs
rust_memes/src/eight/literals/basic/: bool.rs  functions.rs  list.rs  number.rs  string.rs  variableref.rs
rust_memes/src/eight/literals/basic/functions/: args.rs  content.rs  signature.rs
rust_memes/src/eight/runners/: local.rs
rust_memes/src/eight/values/: namespaces.rs
rust_memes/src/eight/values/namespaces/: algorithms.rs  database.rs  model.rs
rust_memes/src/networking/: search.rs
rust_memes/src/webui/: index.rs
rust_memes/testing/: basic.8  generic.8  iris.csv  mystuff.py  test.8
(+2 files in other folders)
